Fixe cv's file page organisation;modify media for text align (picture class);change grid parameter (m12 instead of previous m8) to center picture in when device are small;fixe picture sizes. Change all footers just by writting developper instead of designer

--- a/css/main.css
+++ b/css/main.css
@@ -112,14 +112,14 @@ background-color: #6242A8;
 header, footer{
 padding-bottom: 15px;
 }
-nav{
 
-}
 nav,.skills-contact{
 background-color: #BCA2F5;
 }
 
-
+p{
+  color: #6242A8;
+}
 ul{
   color: #FFF236;
 }
@@ -207,6 +207,15 @@ a img {
      .wrap{
        min-height:(100vh);
            }
+
+         }
+    @media (max-width: 544px) {
+      picture{
+        text-align: left;
+
+            }
+      }
+
 
    /* ##################################################################### */
    /* ############################   TABLETS   ############################ */
